@@ -1,0 +1,7 @@
+{
+  "variants": {
+    "": {
+      "model": "valoria:block/pyratite_block"
+    }
+  }
+}
