@@ -1,28 +1,28 @@
 {
   "variants": {
     "facing=down": {
-      "model": "valoria:block/void_crystal",
+      "model": "valoria:block/pyratite_crystal",
       "x": 180
     },
     "facing=east": {
-      "model": "valoria:block/void_crystal",
+      "model": "valoria:block/pyratite_crystal",
       "x": 90,
       "y": 90
     },
     "facing=north": {
-      "model": "valoria:block/void_crystal",
+      "model": "valoria:block/pyratite_crystal",
       "x": 90
     },
     "facing=south": {
-      "model": "valoria:block/void_crystal",
+      "model": "valoria:block/pyratite_crystal",
       "x": 90,
       "y": 180
     },
     "facing=up": {
-      "model": "valoria:block/void_crystal"
+      "model": "valoria:block/pyratite_crystal"
     },
     "facing=west": {
-      "model": "valoria:block/void_crystal",
+      "model": "valoria:block/pyratite_crystal",
       "x": 90,
       "y": 270
     }
