@@ -611,7 +611,7 @@
   "block.valoria.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
   "block.valoria.wicked_amethyst_ore": "Wicked Amethyst Ore",
   "block.valoria.void_ore": "Void Ore",
-  "block.valoria.void_crystal": "Void Crystal",
+  "block.valoria.pyratite_crystal": "Pyratite Crystal",
   "block.valoria.void_taint_lantern": "Void Taint Lantern",
   "block.valoria.abyssal_lantern": "Abyssal Lantern",
   "block.valoria.amber_crystal": "Amber Crystal",
