@@ -1,5 +1,5 @@
 {
-	"credit": "Made with Blockbench",
+    "render_type": "minecraft:cutout",
 	"texture_size": [32, 32],
 	"textures": {
 		"1": "valoria:block/crypt_lantern",
