@@ -2,6 +2,6 @@
   "render_type": "minecraft:cutout",
   "parent": "minecraft:block/cross",
   "textures": {
-    "cross": "valoria:block/void_crystal"
+    "cross": "valoria:block/pyratite_crystal"
   }
 }
