@@ -1,0 +1,3 @@
+{
+  "parent": "valoria:block/pyratite_block"
+}
