@@ -22,6 +22,7 @@
     "valoria:polished_ephemarite",
     "valoria:dormant_crystals",
     "valoria:meat_block",
+    "valoria:pyratite_block",
     "valoria:cobalt_block",
     "valoria:nature_block",
     "valoria:aquarius_block",
@@ -167,7 +168,7 @@
     "valoria:deepslate_cobalt_ore",
     "valoria:wicked_amethyst_ore",
     "valoria:pearlium_ore",
-    "valoria:void_crystal",
+    "valoria:pyratite_crystal",
     "valoria:amber_crystal",
     "valoria:amethyst_crystal",
     "valoria:ruby_crystal",
